# AlarmSys

./: .gitignore  Alarm.cpp  Alarm.hpp  CMakeLists.txt  Executor.cpp  README.md  main.cpp
include/: Alarm.hpp  Executor.hpp
src/: Alarm.cpp  Executor.cpp  main.cpp
tests/: AlarmTest.cpp  ExecutorTest.cpp  catch_main.cpp
